--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,9 @@ figcaption {
   color: red;
 }
 
-
+img, video, audio {
+  max-width: 100%;
+}
 
 .wrapper {
   width: 960px;
@@ -110,4 +112,39 @@ figcaption {
 
 .first {
   margin-left: 0%;
+}
+
+section {
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#social {
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  width: 40px;
+  z-index: 1;
+}
+
+#social a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: yellow;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  z-index: 1;
 }
